--- a/MythicalCanines/Views/Home/Index.cshtml
+++ b/MythicalCanines/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to Mythical Canines!</h1>
+</div>
+
+<div class="text-center">
+    <h2>A mobile game about dogs fight in a team to attack and defend from the evil cats from destroying their world.</h2>
 </div>
