Created a Favicon Icon

--- a/MythicalCanines/Views/Home/Index.cshtml
+++ b/MythicalCanines/Views/Home/Index.cshtml
@@ -9,3 +9,9 @@
 <div class="text-center">
     <h2>A mobile game about dogs fight in a team to attack and defend from the evil cats from destroying their world.</h2>
 </div>
+
+<head runat="server">
+    <title>Mythical Canines</title>
+    <link runat="server" rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link runat="server" rel="icon" href="favicon.ico" type="image/ico" />
+</head>
