--- a/MythicalCanines/Views/Home/About.cshtml
+++ b/MythicalCanines/Views/Home/About.cshtml
@@ -5,3 +5,8 @@
 
 <h1>About</h1>
 
+<p>Mythical Canines is a RPG (Role Playing Game) about dogs with special classes who attack and defend from the cats who are trying to invade their land.</p>
+<p>You (the player) have lost all of your memory and have no idea how you got here and why you're sleeping near a big glowing elder tree.</p>
+<p>Your character encounters a animal like creature that looks like a dog but you are unsure from the mysterious cloak it wears.</p>
+<p>He steps towards you and this is where your journey will begin.</p>
+
