Privacy page with information

--- a/MythicalCanines/Views/Home/Privacy.cshtml
+++ b/MythicalCanines/Views/Home/Privacy.cshtml
@@ -9,5 +9,13 @@
     <link runat="server" rel="icon" href="favicon.ico" type="image/ico" />
 </head>
 
-<p>Here at </p>
+<p>Here at FlareCo, we respect your privacy and it's important to you. Please read carefully and take your time in the privacy policy page.
+    Our Policy is created to help you understand what kind of data we will collect and how we use and share information and how the data it is protected.</p>
+
+<div>
+    <h1>1.) What types of data we collect</h1>
+</div>
+
+<p>The information you give to us.
+    This includes Email, password, phone number</p>
 
