--- a/MythicalCanines/Views/Shared/_Layout.cshtml
+++ b/MythicalCanines/Views/Shared/_Layout.cshtml
@@ -16,9 +16,11 @@
               integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE=" />
     </environment>
     <link rel="stylesheet" href="~/css/site.css" />
-    <title>Mythical Canines</title>
-    <link runat="server" rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link runat="server" rel="icon" href="favicon.ico" type="image/ico" />
+
+    @*<title>Mythical Canines</title>*@
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/ico" />
+
 </head>
 <body>
     <header>
@@ -43,6 +45,9 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Update">DeveloperUpdates</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Artwork">Artwork</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
