Added Pictures and Edited and fixed pages

--- a/MythicalCanines/Views/Home/Artwork.cshtml
+++ b/MythicalCanines/Views/Home/Artwork.cshtml
@@ -6,3 +6,5 @@
 <h1>Artwork</h1>
 
 @*https://docs.microsoft.com/en-us/aspnet/web-pages/overview/ui-layouts-and-themes/9-working-with-images*@
+
+<img src="~/Content/MK9Castle.png" />
