--- a/MythicalCanines/Views/Home/Index.cshtml
+++ b/MythicalCanines/Views/Home/Index.cshtml
@@ -11,9 +11,8 @@
 </div>
 
 <div class="text-center">
-    <img src="~/Content/MK9Awaken.png" />
+    <img src="~/Content/MK9Classes.png" />
 </div>
-
 
 @*<head runat="server">
         <title>Mythical Canines</title>
