--- a/MythicalCanines/Views/Home/Update.cshtml
+++ b/MythicalCanines/Views/Home/Update.cshtml
@@ -5,3 +5,6 @@
 
 <h1>Update</h1>
 
+<h2>4/15/2019 Ver. 1.0.0</h2>
+<p>Hey guys! Welcome to Mythical Canines developer updates Version 1.0.0!<br /> Test</p>
+
