Created Dark theme and made a progress bar and pop-up

--- a/MythicalCanines/Views/Home/Update.cshtml
+++ b/MythicalCanines/Views/Home/Update.cshtml
@@ -6,5 +6,6 @@
 <h1>Update</h1>
 
 <h2>4/15/2019 Ver. 1.0.0</h2>
-<p>Hey guys! Welcome to Mythical Canines developer updates Version 1.0.0!<br /> Test</p>
+<p>Hey guys! Welcome to Mythical Canines developer updates Version 1.0.0!<br /> The first update for this game! Yay~ Anyway, you the player can control a K9 can choose one of the 4 classes. <br />
+    </p>
 
