--- a/MythicalCanines/Views/Home/Index.cshtml
+++ b/MythicalCanines/Views/Home/Index.cshtml
@@ -19,3 +19,11 @@
         <link runat="server" rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
         <link runat="server" rel="icon" href="favicon.ico" type="image/ico" />
 </head>*@
+<div class="alert alert-dismissible alert-primary">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <strong>Website isn't done yet!</strong> <a href="#" class="alert-link"> About 15% done. </a> 
+</div>
+
+<div class="progress">
+    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width: 15%"></div>
+</div>
