--- a/MythicalCanines/Views/Home/UserBoard.cshtml
+++ b/MythicalCanines/Views/Home/UserBoard.cshtml
@@ -6,3 +6,13 @@
 <h1>UserBoard</h1>
 
 @*https://docs.microsoft.com/en-us/aspnet/core/security/authentication/social/twitter-logins?view=aspnetcore-2.2*@
+
+<div class="jumbotron">
+    <h1 class="display-3">Work in progress!</h1>
+    <p class="lead">The page is still a work in progress! Come back again when we're done finishing the page.</p>
+    <hr class="my-4">
+    <p>Approx: 2 months</p>
+    <p class="lead">
+        <a class="btn btn-primary btn-lg" href="https://youtu.be/rVPA-XhJDso" role="button">How I feel</a>
+    </p>
+</div>
