--- a/MythicalCanines/Views/Shared/_Layout.cshtml
+++ b/MythicalCanines/Views/Shared/_Layout.cshtml
@@ -17,12 +17,14 @@
               integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE=" />
         <link rel="stylesheet" href="~/css/site.css" />
     </environment>
+    
+    @RenderSection("Head", required: false)
 
     @*<title>Mythical Canines</title>*@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/ico" />
     @*<link href="http://cdn.kendostatic.com/2016.3.914/styles/kendo.black.min.css" rel="stylesheet" type="text/css" />
-    <link href="http://cdn.kendostatic.com/2016.3.914/styles/kendo.dataviz.black.min.css" rel="stylesheet" type="text/css" />*@
+        <link href="http://cdn.kendostatic.com/2016.3.914/styles/kendo.dataviz.black.min.css" rel="stylesheet" type="text/css" />*@
 
 </head>
 <body>
@@ -35,24 +37,24 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <partial name="_LoginPartial" />
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                    <ul class="navbar-nav" mr-auto>
+                        <li class="nav-item active">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UserBoard">UserBoard</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="UserBoard">UserBoard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Update">DeveloperUpdates</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Update">DeveloperUpdates</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Artwork">Artwork</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Artwork">Artwork</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
                 </div>
