--- a/MythicalCanines/Views/Home/Index.cshtml
+++ b/MythicalCanines/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
+<link rel="stylesheet" href="~/css/site.css">
+
 <div class="text-center">
     <h1 class="display-4">Welcome to Mythical Canines!</h1>
 </div>
@@ -10,20 +12,56 @@
     <h2>A mobile game about dogs fight in a team to attack and defend from the evil cats from destroying their world.</h2>
 </div>
 
-<div class="text-center">
-    <img src="~/Content/MK9Classes.png" />
+@*<div class="text-center">
+        <img src="~/Content/MK9Classes.png" />
+    </div>*@
+
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="img-fluid" src="~/Content/MK9Classes.png" alt="">
+            <h3>Four Classes</h3>
+            <p>Choose your class and reclaim your land!</p>
+        </div>
+        <div class="carousel-item">
+            <img class="item" src="~/Content/MK9Classes.png" alt="Second slide">
+            <h3>Test</h3>
+            <p>Test</p>
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="~/Content/MK9Classes.png" alt="Third slide">
+            <h3>Test</h3>
+            <p>Test</p>
+        </div>
+    </div>
+    <a class="left carousel-control" href="#carouselExampleIndicators" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#carouselExampleIndicators" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+    </a>
 </div>
 
-@*<head runat="server">
-        <title>Mythical Canines</title>
-        <link runat="server" rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-        <link runat="server" rel="icon" href="favicon.ico" type="image/ico" />
-</head>*@
 <div class="alert alert-dismissible alert-primary">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <strong>Website isn't done yet!</strong> <a href="#" class="alert-link"> About 15% done. </a> 
+    <strong>Website isn't done yet!</strong> <a href="#" class="alert-link"> About 15% done. </a>
 </div>
 
 <div class="progress">
     <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width: 15%"></div>
 </div>
+
+
+@*<head runat="server">
+            <title>Mythical Canines</title>
+            <link runat="server" rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+            <link runat="server" rel="icon" href="favicon.ico" type="image/ico" />
+    </head>*@
+
