--- a/MythicalCanines/wwwroot/css/site.css
+++ b/MythicalCanines/wwwroot/css/site.css
@@ -6,6 +6,13 @@ a.navbar-brand {
   text-align: center;
   word-break: break-all;
 }
+/*.carousel-inner > .item > img {
+    width: 640px;
+    height: 360px;
+}*/
+/*.carousel-inner > .item > img {
+    margin: 0 auto;
+}*/
 
 /* Sticky footer styles
 -------------------------------------------------- */
