Populated updateand privacy policy.

--- a/MythicalCanines/Views/Home/Privacy.cshtml
+++ b/MythicalCanines/Views/Home/Privacy.cshtml
@@ -16,6 +16,16 @@
     <h1>1.) What types of data we collect</h1>
 </div>
 
-<p>The information you give to us.
-    This includes Email, password, phone number</p>
+<p> * The information you give to us.<br /> 
+    This includes Email, password, phone number. We do not send any personal infomation 
+    other users and make sure this information is super secure.<br /> 
+    * The information about your device.<br /> 
+    When we collect your device we collect, the model number, serial number, the device settings, device settings,
+    operating system IP address and other unique identifiers.<br />
+</p>
 
+<div>
+    <h1>2.) Contact information</h1>
+</div>
+
+<p> If you you have any questions about the game or any concerns. Feel free to contact us!</p>
