--- a/MythicalCanines/Views/Home/Update.cshtml
+++ b/MythicalCanines/Views/Home/Update.cshtml
@@ -6,6 +6,13 @@
 <h1>Update</h1>
 
 <h2>4/15/2019 Ver. 1.0.0</h2>
-<p>Hey guys! Welcome to Mythical Canines developer updates Version 1.0.0!<br /> The first update for this game! Yay~ Anyway, you the player can control a K9 can choose one of the 4 classes. <br />
+<p>Hey guys! Welcome to Mythical Canines developer updates Version 1.0.0!<br /> The first update for this game! Yay~ Anyway, you the player can control a K9 can choose one of the 4 classes. In
+    this world you fight against evil cats who've taken over the dogs territory.<br />
+    </p>
+
+<h3>What's New?</h3>
+
+<p> - Added a ability to all classes called fusion classes.<br /> Fusion classes are classes that the K9's can obtain when you have two classes unlocked.<br />
+    For example if you're an thief and a mage You can still be a thief with mage powers or a mage with thief powers. The original class moves will still be useable.<br />
     </p>
 
