Updated Developer Updates and published website

--- a/MythicalCanines/Views/Home/Update.cshtml
+++ b/MythicalCanines/Views/Home/Update.cshtml
@@ -12,11 +12,17 @@
 
 <h3>What's New?</h3>
 
-<p> - Added Beta version 1.0.0!
+<p> - Added Beta version 1.0.0!<br />
+    Featuring new mode, better gameplay and bug fixes.<br />
     - Added a ability to all classes called fusion classes.<br /> 
     Fusion classes are classes that the K9's can obtain when you have two classes unlocked.<br />
     For example if you're an thief and a mage You can still be a thief with mage powers or a mage with thief powers. The original class moves will still be useable.<br /> 
     - Players can now make in app purchases<br /> 
-    Players can purchase with real world money and exchange it with Kirohexim. (*Optional purchase)
+    Players can purchase with real world money and exchange it with Kirohexim. (*Optional purchase)<br />
+    - Added a new playable mode named Snack Attack!<br />
+    Players move around and attack incoming enemies gaining Mythical Points.<br /> 
+    Gaining a lot of Mythical Points or MP grants the player to access powerful moves to gain more snacks.<br />
+    The most player with the most amount of snacks before the time runs out wins.<br />
+    - Minor Bug Fixes<br />
 </p>
 
