Edited more text in updates

--- a/MythicalCanines/Views/Home/Update.cshtml
+++ b/MythicalCanines/Views/Home/Update.cshtml
@@ -24,5 +24,14 @@
     Gaining a lot of Mythical Points or MP grants the player to access powerful moves to gain more snacks.<br />
     The most player with the most amount of snacks before the time runs out wins.<br />
     - Minor Bug Fixes<br />
+    In some case players can get stuck in the wall in world 2-1 in a certain parts the map.<br />
+    Fixed various glitches such as player models stretching.<br />
+    Minor text errors in the shop.<br />
+</p>
+
+<h2>5/4/2019 Ver. 1.0.1</h2>
+<p>Welcome to Mythical Canines developer updates Version 1.0.1!<br /> 
+   In this update will be sharing some new features and a new holiday event collaboration with StarWars
+
 </p>
 
