Updated more on Developer Page.

--- a/MythicalCanines/Views/Home/Update.cshtml
+++ b/MythicalCanines/Views/Home/Update.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Update";
 }
 
-<h1>Update</h1>
+<h1>Mythical Canines Developer Updates</h1>
 
 <h2>4/15/2019 Ver. 1.0.0</h2>
 <p>Hey guys! Welcome to Mythical Canines developer updates Version 1.0.0!<br /> The first update for this game! Yay~ Anyway, you the player can control a K9 can choose one of the 4 classes. In
@@ -31,7 +31,79 @@
 
 <h2>5/4/2019 Ver. 1.0.1</h2>
 <p>Welcome to Mythical Canines developer updates Version 1.0.1!<br /> 
-   In this update will be sharing some new features and a new holiday event collaboration with StarWars
+   In this update we will be sharing some new features and a new holiday event collaboration with StarWars celebrating May the 4th!
+</p>
+
+<h3>What's new?</h3>
+
+<p>
+    - New Event called the Galactic Strike (Available for this day only!)<br />
+    A battle between space, K9's and Cattens. The player can choose a side to battle on. Who you choose Light or will you choose dark?<br />
+    - New character skin for a limited time for the event (5/4/2019 - 5/6/2019)<br />
+    Added Darky costume and Lightful costume.<br />
+    - New Bundle pack available to power up your K9<br />
+    (*Optional You pay real world money for this bundle, not limited)<br />
+    Bundle packed called boosters gives the player x2 experience, x2 increased monster spawn, x2 decrease monster spawn and increased monster drops.<br />
+    - Added a new class in the Mage field<br /> 
+    Black Mage (More classes for each class will be added in the future)<br />
+    K9's in the Mage field can obtain this class branch when leveling up.<br />
+    Black mages has high attack blasting enemies with ice, fire, water and lightning but are low in defense.<br />
+    Make sure you use a barrier when you're in a pinch and keep a safe distance!<br />
+    - Minor Bug Fixes<br />
+    Fixed a known bug where the player can clip through walls in certain parts of the map.<br />
+    Fixed an ongoing bug that sometimes prevented the player to inflict status conditions on certain bosses.<br />
+    Fixed a bug that prevented the player to unlock combat pets from certain conditions.<br /> 
+</p>
+
+<h2>6/17/2019 Ver. 1.0.2</h2>
+
+<p>
+    It's that time again! Welcome to Myythical Canines Version 1.0.2 a new event is on the horizon check out the new features!<br />
+</p>
+
+<h3>What's New?</h3>
+
+<p>
+    - New event called Summer Meowcation a limited summer event (* Goes on for 6/17/2019 - 6/24/2019)<br />
+    Cattens and K9's want to relax and hang out for a bit before fighting again.<br />
+    - New character skin available for a limited time (* Goes on for 6/17/2019 - 6/24/2019)<br />
+    Added Cool Morning, Relaxing Sunrise, Chilling Midnight<br />
+    - New Bundle packs available (*These bundles are permanent and can be purchased at anytime, *Purchased with real world money)<br />
+    Added a pet bundle<br />
+    These pets can go by your side, you can feed, pet and take care of them. These pets can go out in combat with you and give you certain buffs! (*Only can have out one pet at a time)<br />
+    This featured pet is a Panda bear! This panda bear has travelled though the far vast mountains to see you!<br />
+    Panda Buffs: Gives 20% attack, Critical damage up by 30%, Immune to slow<br />
+    - New class available in the Knight field<br />
+    Berserker (More classes for each class will be added in the future)<br />
+    K9's in the Knight field can obtain this class branch when leveling up.<br />
+    Berserker's has a rage gauge of how much rage can be stored until max, when maxed out.<br />
+    Berserker's has Attack and defense buff, you can be enraged to gain a massive attack boost but be careful as enemies will try to knock you out of rage state!<br />
+    - Minor Bug Fixes<br />
+    Bosses sometimes attack twice when it's a triple attacking move.<br />
+    Some players gets stuck in the login screen on certain devices.<br />
+    On certain conditions bosses tend to get glitched out or get stuck from objects.<br />
+</p>
+
+<h2>7/4/2019 Ver. 1.0.3</h2>
+
+<p>
+    Welcome to Mythical Canines 4th annual Developers update where I give you the details on what's happening in the game!<br />
+    Fourth of July has arrived! The K9's and Cattens are here to celebrate and have fun with fireworks.<br />
+    Let's get started with the updates!<br />
+</p>
+
+<h3>What's New?</h3>
+
+<p>
+    - Added a new event called Colorful Festivals a limited Fourth of July event (* Goes on for 7/4/2019 - 7/11/2019)<br />
+    Various minigames can be played Firework Paddle, Food Frenzy Fury and Blasting Bosses.<br />
+    Firework Paddle is a one on one Tennis match but with a firework bomb, each players gets 3 hearts and one of the players still have remaining hearts and the other doesn't you win!<br />
+    If the timer runs out and you have more hearts than your oppenent you win!<br />
+    Food Frenzy Fury is K9's protecting a giant pile of food and defending from angry Cattens.<br />
+    Food Frenzy Fury is a 4 player minigame and all teammates will try to defend the food piles health bar<br />
+    When the timer runs out and you still have your food pile still up, you win!<br />
+    - New Bundle packs available
 
 </p>
+
 
