--- a/MythicalCanines/Views/Home/Update.cshtml
+++ b/MythicalCanines/Views/Home/Update.cshtml
@@ -7,7 +7,7 @@
 
 <h2>4/15/2019 Ver. 1.0.0</h2>
 <p>Hey guys! Welcome to Mythical Canines developer updates Version 1.0.0!<br /> The first update for this game! Yay~ Anyway, you the player can control a K9 can choose one of the 4 classes. In
-    this world you fight against evil cats who've taken over the dogs territory.<br />
+    this world you fight against evil Cattens who've taken over the K9's territory.<br />
 </p>
 
 <h3>What's New?</h3>
@@ -24,7 +24,7 @@
     Gaining a lot of Mythical Points or MP grants the player to access powerful moves to gain more snacks.<br />
     The most player with the most amount of snacks before the time runs out wins.<br />
     - Minor Bug Fixes<br />
-    In some case players can get stuck in the wall in world 2-1 in a certain parts the map.<br />
+    In some cases players can get stuck in the wall in world 2-1 in a certain parts the map.<br />
     Fixed various glitches such as player models stretching.<br />
     Minor text errors in the shop.<br />
 </p>
