--- a/MythicalCanines/Views/Shared/_Layout.cshtml
+++ b/MythicalCanines/Views/Shared/_Layout.cshtml
@@ -45,9 +45,9 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="UserBoard" asp-action="UserBoard">UserBoard</a>
-                        </li>
+                        </li>*@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Update">DeveloperUpdates</a>
                         </li>
