Updated Json and Updated more of the developers tag.

--- a/MythicalCanines/Views/Home/Update.cshtml
+++ b/MythicalCanines/Views/Home/Update.cshtml
@@ -102,7 +102,16 @@
     Food Frenzy Fury is K9's protecting a giant pile of food and defending from angry Cattens.<br />
     Food Frenzy Fury is a 4 player minigame and all teammates will try to defend the food piles health bar<br />
     When the timer runs out and you still have your food pile still up, you win!<br />
-    - New Bundle packs available
+    Blasting Bosses is a single player boss rush minigame.<br />
+    Beat all 3 bosses and you win!<br />
+    - New Bundle pack available<br />
+    A new pet pack is made available (* Permament bundle)<br />
+    Introducing a giraffe pet, he's been excited to hear about all sorts of things from this place and decided to stay here.<br />
+    - Major bug fixes
+    Fixed a known bug that caused several players to crash when loading the game.<br />
+    Fixed a issue where a pet can get stuck on a door and can't get out.<br />
+    In several cases the starting stages caused the player to not move and prevented the player to advance the story.<br />
+
 
 </p>
 
