Commented out stylesheet.

--- a/MythicalCanines/Views/Home/Index.cshtml
+++ b/MythicalCanines/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<link rel="stylesheet" href="~/css/site.css">
+@*<link rel="stylesheet" href="~/css/site.css">*@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to Mythical Canines!</h1>
@@ -34,7 +34,7 @@
             <p>Test</p>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="~/Content/MK9Classes.png" alt="Third slide">
+            <img class="d-block w-50" src="~/Content/MK9Classes.png" alt="Third slide">
             <h3>Test</h3>
             <p>Test</p>
         </div>
