Tried adding in font and test background.

--- a/MythicalCanines/Views/Home/Index.cshtml
+++ b/MythicalCanines/Views/Home/Index.cshtml
@@ -4,6 +4,10 @@
 
 @*<link rel="stylesheet" href="~/css/site.css">*@
 
+<link rel="stylesheet" href="~/css/site.css">
+
+<body background="~/Content/planet.jpg"></body>
+
 <div class="text-center">
     <h1 class="display-4">Welcome to Mythical Canines!</h1>
 </div>
