Added 2 new classes and gave more description to the footer.

--- a/MythicalCanines/Views/Home/Update.cshtml
+++ b/MythicalCanines/Views/Home/Update.cshtml
@@ -3,11 +3,11 @@
     ViewData["Title"] = "Update";
 }
 
-<h1>Mythical Canines Developer Updates</h1>
+<h1>Mythical Canines Developer Updates / News</h1>
 
 <h2>4/15/2019 Ver. 1.0.0</h2>
-<p>Hey guys! Welcome to Mythical Canines developer updates Version 1.0.0!<br /> The first update for this game! Yay~ Anyway, you the player can control a K9 can choose one of the 4 classes. In
-    this world you fight against evil Cattens who've taken over the K9's territory.<br />
+<p>Greetings Players! Welcome to Mythical Canines developer updates Version 1.0.0!<br /> The first update for this game! Anyway, you the player can control a K9 and can choose one of the 4 classes. In
+    this world. You fight against evil Cattens who've taken over the K9's territory.<br />
 </p>
 
 <h3>What's New?</h3>
@@ -23,10 +23,6 @@
     Players move around and attack incoming enemies gaining Mythical Points.<br /> 
     Gaining a lot of Mythical Points or MP grants the player to access powerful moves to gain more snacks.<br />
     The most player with the most amount of snacks before the time runs out wins.<br />
-    - Minor Bug Fixes<br />
-    In some cases players can get stuck in the wall in world 2-1 in a certain parts the map.<br />
-    Fixed various glitches such as player models stretching.<br />
-    Minor text errors in the shop.<br />
 </p>
 
 <h2>5/4/2019 Ver. 1.0.1</h2>
@@ -44,7 +40,7 @@
     - New Bundle pack available to power up your K9<br />
     (*Optional You pay real world money for this bundle, not limited)<br />
     Bundle packed called boosters gives the player x2 experience, x2 increased monster spawn, x2 decrease monster spawn and increased monster drops.<br />
-    - Added a new class in the Mage field<br /> 
+    - Added a new class in the Mage field<br />
     Black Mage (More classes for each class will be added in the future)<br />
     K9's in the Mage field can obtain this class branch when leveling up.<br />
     Black mages has high attack blasting enemies with ice, fire, water and lightning but are low in defense.<br />
@@ -52,7 +48,10 @@
     - Minor Bug Fixes<br />
     Fixed a known bug where the player can clip through walls in certain parts of the map.<br />
     Fixed an ongoing bug that sometimes prevented the player to inflict status conditions on certain bosses.<br />
-    Fixed a bug that prevented the player to unlock combat pets from certain conditions.<br /> 
+    Fixed a bug that prevented the player to unlock combat pets from certain conditions.<br />
+    In some cases players can get stuck in the wall in world 2-1 in a certain parts the map.<br />
+    Fixed various glitches such as player models stretching.<br />
+    Minor text errors in the shop.<br />
 </p>
 
 <h2>6/17/2019 Ver. 1.0.2</h2>
@@ -102,8 +101,8 @@
     Food Frenzy Fury is K9's protecting a giant pile of food and defending from angry Cattens.<br />
     Food Frenzy Fury is a 4 player minigame and all teammates will try to defend the food piles health bar<br />
     When the timer runs out and you still have your food pile still up, you win!<br />
-    - New Bundle packs available
+    - New Bundle packs available<br />
 
-</p>
+</p><br /><br/><br /><br /><br /><br />
 
 
