--- a/MythicalCanines/Views/Home/Index.cshtml
+++ b/MythicalCanines/Views/Home/Index.cshtml
@@ -28,19 +28,19 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="img-fluid" src="~/Content/MK9Classes.png" alt="">
-            <h3>Four Classes</h3>
+            <img class="img-fluid" src="~/Content/classestransp.png" alt="">
+            <h3>Knight, Mage, Thief and Healer</h3>
             <p>Choose your class and reclaim your land!</p>
         </div>
         <div class="carousel-item">
-            <img class="item" src="~/Content/MK9Classes.png" alt="Second slide">
-            <h3>Test</h3>
-            <p>Test</p>
+            <img class="img-fluid" src="~/Content/capm.png" alt="Second slide">
+            <h3>Defeat powerful foes!</h3>
+            <p>Test your skills against bosses!</p>
         </div>
         <div class="carousel-item">
             <img class="d-block w-50" src="~/Content/MK9Classes.png" alt="Third slide">
-            <h3>Test</h3>
-            <p>Test</p>
+            <h3>Attack bosses to drop items!</h3>
+            <p>Gain weapons and grow stronger with your pets!</p>
         </div>
     </div>
     <a class="left carousel-control" href="#carouselExampleIndicators" data-slide="prev">
