--- a/MythicalCanines/Views/Home/Character.cshtml
+++ b/MythicalCanines/Views/Home/Character.cshtml
@@ -2,3 +2,70 @@
     ViewData["Title"] = "Character Page";
 }
 
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a class="nav-link active" data-toggle="tab" href="#Knight">Knight</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" data-toggle="tab" href="#Mage">Mage</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" data-toggle="tab" href="#Thief">Thief</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" data-toggle="tab" href="#Medic">Medic</a>
+        </li>
+        @*<li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+        </li>*@
+        @*<li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">Action</a>
+                <a class="dropdown-item" href="#">Another action</a>
+                <a class="dropdown-item" href="#">Something else here</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#">Separated link</a>
+            </div>
+        </li>*@
+    </ul>
+    <div id="myTabContent" class="tab-content">
+        <div class="tab-pane fade show active text-center" id="Knight">
+            <center>
+                <img class="d-block w-50" src="~/Content/knight.png" alt="">
+            </center>
+            <p>
+                Knight's have well-rounded base attack, having great attack, defense and can support your teammates with a shield.
+            </p>
+        </div>
+        <div class="tab-pane fade text-center" id="Mage">
+            <center>
+                <img class="d-block w-50" src="~/Content/wizard.png" alt="">
+            </center>
+            <p>
+                Mage's can do strong powerful attacks and magic range. A elementalist of Fire, Ice and Lightning.
+            </p>
+        </div>
+        <div class="tab-pane fade text-center" id="Thief">
+            <center>
+                <img class="d-block w-50" src="~/Content/thief.png" alt="">
+            </center>
+            <p>
+                Thief's have super speed and stealing skills. Thief's also can use debuff's and fast attacks against opponents to gain the upper hand.
+            </p>
+        </div>
+        <div class="tab-pane fade text-center" id="Medic">
+            <center>
+                <img class="d-block w-50" src="~/Content/healer.png" alt="">
+            </center>
+            <p>
+                Medic's have
+            </p>
+        </div>
+        @*<div class="tab-pane fade" id="dropdown1">
+            <p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork.</p>
+        </div>
+        <div class="tab-pane fade" id="dropdown2">
+            <p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater.</p>
+        </div>*@
+    </div> <br /><br /><br /><br /><br /><br /><br /><br />
