--- a/MythicalCanines/Views/Home/Index.cshtml
+++ b/MythicalCanines/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
 </div>
 
 <div class="text-center">
-    <h2>A mobile game about dogs fight in a team to attack and defend from the evil cats from destroying their world.</h2>
+    <h2>A mobile game about K9's fighting in a team to attack and defend from the evil Catten's from destroying their world.</h2>
 </div>
 
 @*<div class="text-center">
@@ -29,7 +29,7 @@
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img class="img-fluid" src="~/Content/classestransp.png" alt="">
-            <h3>Knight, Mage, Thief and Healer</h3>
+            <h3>Knight, Mage, Thief and Medic</h3>
             <p>Choose your class and reclaim your land!</p>
         </div>
         <div class="carousel-item">
