Added pictures and edited more to the privacy page.

--- a/MythicalCanines/Views/Home/Privacy.cshtml
+++ b/MythicalCanines/Views/Home/Privacy.cshtml
@@ -16,16 +16,66 @@
     <h1>1.) What types of data we collect</h1>
 </div>
 
-<p> * The information you give to us.<br /> 
-    This includes Email, password, phone number. We do not send any personal infomation 
-    other users and make sure this information is super secure.<br /> 
-    * The information about your device.<br /> 
+<p>
+    * The information you give to us.<br />
+    This includes Email, password, phone number. We do not send any personal infomation
+    other users and make sure this information is super secure.<br />
+    * The information about your device.<br />
     When we collect your device we collect, the model number, serial number, the device settings, device settings,
     operating system IP address and other unique identifiers.<br />
+    * Your Content<br />
+    Our services may allow you to create, upload or share content such as text, images, audio, video, or other content that you create or is licensed to you.<br />
+    When you use any of our services that include these or other similar capabilities we may collect your content in accordance
+    with our user agreements or terms of use and this policy.<br />
+    * Your purchases<br />
+    Some of our services allow you to make purchases.<br />
+    If you use any of our services to make a purchase, we may collect information about the purchase.<br />
+    This could include payment information, such as your credit card number, account authentication information and contact information 
+    like your billing and shipping address.<br />
+
 </p>
 
 <div>
-    <h1>2.) Contact information</h1>
+    <h1>2.) Information security</h1>
 </div>
 
-<p> If you you have any questions about the game or any concerns. Feel free to contact us!</p>
+<p>
+    We have implemented administrative, physical and technical security measures that are designed to protect your information from loss, 
+    theft, misuse, unauthorized access, disclosure, alteration and destruction.<br />
+    You should understand though that, despite our efforts, no security can be guaranteed as impenetrable.<br />
+</p>
+
+<div>
+    <h1>3.) Information about children</h1>
+</div>
+<p>
+    * We do not knowingly collect, use or share personal information from children under the age of 13 without verifiable parental consent 
+    or as permitted by law.<br />
+    * Where a parent or legal guardian has provided consent, the child may be able to use his or her Account to play certain third-party 
+    games and applications that are not published by FlareCo.<br />
+    * Parents or guardians may review, modify, or delete the child’s personal information, or 
+    withdraw consent, by contacting us using the contact information provided at the end of this privacy policy, and may manage which 
+    third-party games and applications can access and use the child’s Mythical Canine's Account information through parental controls.<br />
+</p>
+
+<div>
+    <h1>4.) ESRB Certification</h1>
+</div>
+<p>
+    This privacy policy and the certification seal located on our websites that link to this policy confirms that we are a valid licensee, 
+    and participating member, of the Entertainment Software Rating Board's Privacy Certified Program.<br />
+    To help protect your privacy, we have voluntarily undertaken this privacy initiative.<br /> 
+    As a licensee in this privacy certification program, we are subject to frequent audits of our websites and other enforcement and 
+    accountability mechanisms administered independently by the ESRB.<br /> 
+    All of our sites containing the ESRB certification seal have been reviewed, and certified, by ESRB to meet established online information 
+    collection and use practices.<br />
+</p>
+
+<div>
+    <h1>5.) Contact information</h1>
+</div>
+
+<p> 
+    If you you have any questions about the game or any concerns. Feel free to contact us! Or if you have any concerns or comments on this privacy policy, or any
+    of our privacy practices, please contact us at email mythicalcanines@gmail.com or via phone XXX-XXX-XXXX.    
+</p>
