--- a/MythicalCanines/Views/Home/Index.cshtml
+++ b/MythicalCanines/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
             <p>Test your skills against bosses!</p>
         </div>
         <div class="carousel-item">
-            <img class="d-block w-50" src="~/Content/MK9Classes.png" alt="Third slide">
+            <img class="img-fluid" src="~/Content/upgrade.png" alt="Third slide">
             <h3>Attack bosses to drop items!</h3>
             <p>Gain weapons and grow stronger with your pets!</p>
         </div>
@@ -55,11 +55,11 @@
 
 <div class="alert alert-dismissible alert-primary">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <strong>Website isn't done yet!</strong> <a href="#" class="alert-link"> About 15% done. </a>
+    <strong>Website isn't done yet!</strong> <a href="#" class="alert-link"> About 30% done. </a>
 </div>
 
 <div class="progress">
-    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width: 15%"></div>
+    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 15%"></div>
 </div>
 
 <br />
