Edited Medic to have something. Added picture to main page.

--- a/MythicalCanines/Views/Home/Character.cshtml
+++ b/MythicalCanines/Views/Home/Character.cshtml
@@ -43,7 +43,7 @@
                 <img class="d-block w-50" src="~/Content/wizard.png" alt="">
             </center>
             <p>
-                Mage's can do strong powerful attacks and magic range. A elementalist of Fire, Ice and Lightning.
+                Mage's can do strong powerful attacks and magic range. A elementalist of Fire, Ice and Lightning. You can help teammate with force fields and buff areas.
             </p>
         </div>
         <div class="tab-pane fade text-center" id="Thief">
@@ -51,7 +51,7 @@
                 <img class="d-block w-50" src="~/Content/thief.png" alt="">
             </center>
             <p>
-                Thief's have super speed and stealing skills. Thief's also can use debuff's and fast attacks against opponents to gain the upper hand.
+                Thief's super speed and stealing skills can give the party added bonus loot after they end a quest. Thief's also can use debuff's and fast attacks against opponents to gain the upper hand.
             </p>
         </div>
         <div class="tab-pane fade text-center" id="Medic">
@@ -59,7 +59,7 @@
                 <img class="d-block w-50" src="~/Content/healer.png" alt="">
             </center>
             <p>
-                Medic's have
+                Medic's have great burst healing, regen and can revive your teammates to survive a tough quest. They can clean status elements as well.
             </p>
         </div>
         @*<div class="tab-pane fade" id="dropdown1">
