--- a/MythicalCanines/Views/Home/Index.cshtml
+++ b/MythicalCanines/Views/Home/Index.cshtml
@@ -1,72 +1,82 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+    @*<link rel="stylesheet" href="~/css/site.css">*@
 
-@*<link rel="stylesheet" href="~/css/site.css">*@
+    <link rel="stylesheet" href="~/css/site.css">
 
-<link rel="stylesheet" href="~/css/site.css">
+    @*<style>
+        body{
+            background-image:url("~/Content/planet.jpg");
+        }
+    </style>*@
 
-<body background="~/Content/planet.jpg"></body>
+    @*<body background="~/Content/planet.jpg"></body>*@
 
-<div class="text-center">
-    <h1 class="display-4">Welcome to Mythical Canines!</h1>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Welcome to Mythical Canines!</h1>
+    </div>
 
-<div class="text-center">
-    <h2>A mobile game about K9's fighting in a team to attack and defend from the evil Catten's from destroying their world.</h2>
-</div>
+    <div class="text-center">
+        <h2>A mobile game about K9's fighting in a team to attack and defend from the evil Catten's from destroying their world.</h2>
+    </div>
 
-@*<div class="text-center">
+    @*<div class="text-center">
         <img src="~/Content/MK9Classes.png" />
     </div>*@
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img class="img-fluid" src="~/Content/classestransp.png" alt="">
-            <h3>Knight, Mage, Thief and Medic</h3>
-            <p>Choose your class and reclaim your land!</p>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <center>
+                    <img class="d-block w-75" src="~/Content/classestransp.png" alt="">
+                </center>
+                <h3>Knight, Mage, Thief and Medic</h3>
+                <p>Choose your class and reclaim your land!</p>
+            </div>
+            <div class="carousel-item">
+                <center>
+                    <img class="d-block w-75" src="~/Content/capm.png" alt="Second slide">
+                </center>
+                <h3>Defeat powerful foes!</h3>
+                <p>Test your skills against bosses!</p>
+            </div>
+            <div class="carousel-item">
+                <center>
+                    <img class="d-block w-75" src="~/Content/upgrade.png" alt="Third slide">
+                </center>
+                <h3>Attack bosses to drop items!</h3>
+                <p>Gain weapons and grow stronger with your pets!</p>
+            </div>
         </div>
-        <div class="carousel-item">
-            <img class="img-fluid" src="~/Content/capm.png" alt="Second slide">
-            <h3>Defeat powerful foes!</h3>
-            <p>Test your skills against bosses!</p>
-        </div>
-        <div class="carousel-item">
-            <img class="img-fluid" src="~/Content/upgrade.png" alt="Third slide">
-            <h3>Attack bosses to drop items!</h3>
-            <p>Gain weapons and grow stronger with your pets!</p>
-        </div>
+        <a class="left carousel-control" href="#carouselExampleIndicators" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#carouselExampleIndicators" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
-    <a class="left carousel-control" href="#carouselExampleIndicators" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#carouselExampleIndicators" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
 
-<div class="alert alert-dismissible alert-primary">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <strong>Website isn't done yet!</strong> <a href="#" class="alert-link"> About 30% done. </a>
-</div>
+    <div class="alert alert-dismissible alert-primary">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>Website isn't done yet!</strong> <a href="#" class="alert-link"> About 30% done. </a>
+    </div>
 
-<div class="progress">
-    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 15%"></div>
-</div>
+    <div class="progress">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 15%"></div>
+    </div>
 
-<br />
+    <br />
 
-@*<head runat="server">
+    @*<head runat="server">
             <title>Mythical Canines</title>
             <link runat="server" rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
             <link runat="server" rel="icon" href="favicon.ico" type="image/ico" />
     </head>*@
-
