Added text font, added more text in mutiple html files.

--- a/MythicalCanines/Views/Home/Index.cshtml
+++ b/MythicalCanines/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
     @*<link rel="stylesheet" href="~/css/site.css">*@
 
-    <link rel="stylesheet" href="~/css/site.css">
+    @*<link rel="stylesheet" href="~/css/site.css">*@
 
     @*<style>
         body{
@@ -13,11 +13,11 @@
 
     @*<body background="~/Content/planet.jpg"></body>*@
 
-    <div class="text-center">
+    <div class="text-center textfont">
         <h1 class="display-4">Welcome to Mythical Canines!</h1>
     </div>
 
-    <div class="text-center">
+    <div class="text-center textfont">
         <h2>A mobile game about K9's fighting in a team to attack and defend from the evil Catten's from destroying their world.</h2>
     </div>
 
