--- a/MythicalCanines/Views/Home/Pet.cshtml
+++ b/MythicalCanines/Views/Home/Pet.cshtml
@@ -2,8 +2,31 @@
     ViewData["Title"] = "Pet Page";
 }
 
-<img src="~/Content/panda.png" />
+-image with pets-
+    <center>
+        <img class="img-fluid" src="~/Content/panda.png" alt="" />
+        Placeholder
+    
 
-<p>
+    <p>
+        Pet's are your companions that fight along side with you.<br />
+    </p>
 
-</p>
+     -Insert petting pet image here, maybe another carosel with feeding grooming and playing-
+
+    <p>
+        Pet's can be groomed, fed and played with to raise friendship level.<br />
+        When you raise friendship level your pet slowly grows attached to you giving you bonus combat buffs!<br />
+    </p>
+
+    -Insert friendship raise picture-
+
+    <p>
+        The more friendship K9's have with their pets the more combat buffs K9's can get from their pets.<br />
+        K9's can get a great boost from it.<br />
+        For example: If the player has a sheep, the sheep gives immune to slow and 5% attack boost.<br />
+        But if you raise it's friendship level to max, the sheep wil give immune to slow, 
+        15% attack boost and healing increased by 10% if the player uses a healing item.<br />
+    </p>
+
+    </center>
