--- a/MythicalCanines/Views/Home/Update.cshtml
+++ b/MythicalCanines/Views/Home/Update.cshtml
@@ -31,7 +31,7 @@
 
         <p>
             - Added Beta version 1.0.0!<br />
-            Featuring new mode, better gameplay and bug fixes.<br />
+            Featuring a new mode and better gameplay<br />
             - Added a ability to all classes called fusion classes.<br />
             Fusion classes are classes that the K9's can obtain when you have two classes unlocked.<br />
             For example if you're an thief and a mage You can still be a thief with mage powers or a mage with thief powers. The original class moves will still be useable.<br />
@@ -130,7 +130,9 @@
             - New Bundle pack available<br />
             A new pet pack is made available (* Permament bundle)<br />
             Introducing a giraffe pet, he's been excited to hear about all sorts of things from this place and decided to stay here.<br />
-            - Major bug fixes
+            Giraffe gives the player these buffs.<br />
+            Giraffe buffs: Every 4th attack has a chance to stun an enemy, increased health by 200 and immune to stun.<br />
+            - Major bug fixes<br />
             Fixed a known bug that caused several players to crash when loading the game.<br />
             Fixed a issue where a pet can get stuck on a door and can't get out.<br />
             In several cases the starting stages caused the player to not move and prevented the player to advance the story.<br />
