--- a/MythicalCanines/Views/Home/Character.cshtml
+++ b/MythicalCanines/Views/Home/Character.cshtml
@@ -37,6 +37,19 @@
             <p>
                 Knight's have well-rounded base attack, having great attack, defense and can support your teammates with a shield.
             </p>
+            @*<div class="btn-group btn-group-toggle" data-toggle="buttons">
+                <label class="btn btn-primary">
+                    <input type="radio" name="options" id="option1" autocomplete="off" checked=""> Attack
+                    <img class="img-fluid" src="~/Content/livid.png" alt="">
+                </label>
+                <label class="btn btn-primary">
+                    <input type="radio" name="options" id="option2" autocomplete="off"> Special 1
+                    <img class="img-fluid" src="~/Content/capm.png" alt=""/>
+                </label>
+                <label class="btn btn-primary active">
+                    <input type="radio" name="options" id="option3" autocomplete="off"> Special 2
+                </label>
+            </div>*@
         </div>
         <div class="tab-pane fade text-center" id="Mage">
             <center>
