--- a/MythicalCanines/Views/Shared/_Layout.cshtml
+++ b/MythicalCanines/Views/Shared/_Layout.cshtml
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - MythicalCanines</title>
 
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrapdark.css" />
+    <link rel="stylesheet" href="~/css/IndexSheet.css" />
     <environment include="Development">
         <link rel="stylesheet" href="~/css/site.css" />
-        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrapdark.css" />
+
         @*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />*@
 
     </environment>
@@ -19,7 +21,7 @@
               integrity="sha256-eSi1q2PG6J7g7ib17yAaWMcrr5GrtohYChqibrV7PBE=" />
         <link rel="stylesheet" href="~/css/site.css" />
     </environment>
-    
+
     @RenderSection("Head", required: false)
 
     @*<title>Mythical Canines</title>*@
@@ -37,6 +39,7 @@
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+                @*navbarColor01*@
                 <div class="collapse navbar-collapse" id="navbarColor01">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav" mr-auto>
@@ -55,17 +58,26 @@
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Update">News</a>
                         </li>
 
-                        <li class="nav-item">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true">Gameplay</a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Character">Characters</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Pet">Pets</a>
+                            </div>
+                        </li>
+
+                        @*<li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Character">Characters</a>
                         </li>
 
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Pet">Pets</a>
-                        </li>
+                        </li>*@
 
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Artwork">Gameplay</a>
-                        </li>
+                        </li>*@
 
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
