--- a/MythicalCanines/wwwroot/css/IndexSheet.css
+++ b/MythicalCanines/wwwroot/css/IndexSheet.css
@@ -5,11 +5,11 @@
 }
 
 @font-face {
-    font-family: 'arcade';
+    font-family: 'arcade' !important;
     src: url(~/text/PressStart2P.ttf)format('opentype');
 }
 
-.classname {
+.textfont {
     font-family: 'arcade';
 }
 
