--- a/MythicalCanines/Views/Home/Pet.cshtml
+++ b/MythicalCanines/Views/Home/Pet.cshtml
@@ -2,10 +2,10 @@
     ViewData["Title"] = "Pet Page";
 }
 
--image with pets-
+<img class="d-block w-25" src="~/Content/Petstag.png" alt="" />
+
     <center>
-        <img class="img-fluid" src="~/Content/panda.png" alt="" />
-        Placeholder
+        <img class="d-block w-50" src="~/Content/pet.png" alt="" />
     
 
     <p>
