--- a/MythicalCanines/Views/Shared/_Layout.cshtml
+++ b/MythicalCanines/Views/Shared/_Layout.cshtml
@@ -95,6 +95,9 @@
     </div>
 
     <footer class="border-top footer text-muted text-center">
+        <div>
+            <a asp-area="" asp-controller="Home" asp-action="Index"> News</a>
+        </div>
         <div class="container">
             &copy; 2019 - MythicalCanines - <a asp-area="" asp-controller="Home" asp-action="Update"> News</a> / <a asp-area="" asp-controller="Home" asp-action="Privacy"> Privacy </a>
         </div>
